优化配置及文档

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,11 +19,11 @@ http {
 
     server {
         listen 80;
-        server_name ims;
+        server_name www.ims.lujiatao.com ims.lujiatao.com;
 
         location /api {
             rewrite "^/api/(.*)$" /$1 break;
-            proxy_pass http://PLACEHOLDER_ENV;
+            proxy_pass http://IMS_ENV_IP:10005;
             proxy_set_header Host $host:10006;#防止重定向时，响应头的Location没有端口号（因为Nginx为80）
         }
 
